--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <li class="lead"><i class="fas fa-dot-circle"></i> Meu foco é em ensaios fotograficos de moda e cosplay.</li>
                         <li class="lead"><i class="fas fa-dot-circle"></i> Fotos com edição avançada ou simples tanto em eventos ou particular.</li>
                         <li class="lead"><i class="fas fa-dot-circle"></i> Consultas de preços e datas são feitas somente via instagram no direct.</li>
-                        <li class="lead"><i class="fas fa-dot-circle"></i> Foco em redes sociais, portanto você tem a opção de escolher o formato ideal para cada tipo de postagem.</li>
+                        <li class="lead"><i class="fas fa-dot-circle"></i> Meu foco são fotos voltadas para rede social, então você tem a liberdade de escolher o formato ideal para cada tipo de postagem.</li>
                 </ul>
 
                 <div class="work-bottom grid">
