--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -47,10 +47,10 @@
                         <h2>Sobre mim</h2>
                     </div>
                     <p class= "lead">Sempre tive interesse em fotografia e, como muitos, comecei apenas com a vontade de aprender, editando fotos e estudando a área. 
-                        Inicialmente, minhas fotografias não eram especiais, mas após adquirir meu primeiro equipamento no final de 2022, descobri minha paixão pela fotografia. 
+                        Inicialmente, minhas fotografias não eram nada especiais, mas após adquirir meu primeiro equipamento no final de 2022, descobri minha paixão pela fotografia. 
                         </p>
-                        <p class= "lead">Com o tempo, meu interesse se expandiu para a criação de conteúdo em geral e a arte associada. 
-                            Ao final de 2023, sinto-me confiante para dar o próximo passo na minha carreira como fotógrafo em 2024.</p>
+                        <p class= "lead">Com o tempo, meu interesse se expandiu para a criação de conteúdo em geral e arte. 
+                            Ao final de 2023, me sinto confiante o bastante para dar o próximo passo na minha carreira como fotógrafo em 2024.</p>
                         
                 </div>
             </div>
@@ -75,7 +75,7 @@
                 <div class="work-bottom grid">
                     <div>
                         <span class="icon"><img src="images/landscape-icon.png"></span>
-                        <h3>Natureza</h3>
+                        <h3>Eventos</h3>
                     </div>
                     <div>
                         <span class="icon"><img src="images/street-icon.png"></span>
